<resources>
    <string name="app_name">Shodand</string>
    <string name="btn_scan_qr_code">Scan QR code</string>
    <string name="btn_introduce_key_manually">Introduce manually</string>

    <string name="title_introduce_key_fragment">Your Shodan API key</string>
    <string name="txt_introduce_api_key">Introduce here your API key</string>
    <string name="txt_description_api_key">Copy and paste here your API key or use the button to paste directly the content of your clipboard.</string>
    <string name="hint_paste_api_key">Paste here your API key</string>
    <string name="btn_continue_with_api_key">Continue</string>
    <string name="txt_validate_api_key">Validating…</string>
    <string name="txt_first_step">First step!</string>
    <string name="txt_introduction_firs_step">Choose a method to setup your Shodan API key. If you do not have an account yet, create one at</string>
    <string name="title_configure_account">Configure your account</string>
    <string name="txt_shodan_web">https://account.shodan.io/register</string>
    <string name="txt_show_rationale_camera">Camera access is needed in order to scan your QR key code.</string>
    <string name="txt_ok">ok</string>
    <string name="til_your_api_key">Your API key</string>
    <string name="mnu_paste">Paste</string>
    <string name="empty_api_key">API key can\'t be empty</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_explore">Explore Shodan</string>
    <string name="title_popular_tags">Popular tags</string>
    <string name="txt_tags_not_found">Popular tags not found</string>
    <string name="show_unexpected_error">An unexpected error has occurred</string>
    <string name="description_popular_tags">Popular tags for the saved search queries in Shodan</string>
    <string name="title_recent_shared">Queries</string>
    <string name="description_recent_shared">List or search queries that users have saved</string>
    <string name="title_list_queries">List queries</string>
    <string name="title_search_queries">Search queries</string>
    <string name="title_services">Services</string>
    <string name="description_services">Search services by ip, get summary info from a host or make a custom search</string>
    <string name="title_service_by_ip">Search by IP</string>
    <string name="title_service_summary_info">Get summary info</string>
    <string name="title_search_service">Search services</string>
    <string name="title_protocols">Protocols</string>
    <string name="description_protocols">List of protocols used by Shodan to scan the internet</string>
    <string name="title_dns_name">Dns</string>
    <string name="description_dns">Look up hostnames or IPs</string>
    <string name="resolve_ip_address">Resolve DNS</string>
    <string name="reverse_dns">Reverse DNS</string>
    <string name="msg_protocol_not_found">Protocols not found. Touch to refresh info</string>
    <string name="txt_show_more">Show more...</string>
    <string name="msg_list_queries_not_found">Queries not found. Touch to refresh info</string>
    <string name="votes">votes</string>
    <string name="vote">vote</string>
    <string name="txt_execute_query">Execute</string>

</resources>
