<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_first_step"
        android:textSize="@dimen/txt_title_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_introduction_firs_step" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/txt_shodan_web" />

    <Button
        android:id="@+id/btn_scan_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan_qr_code" />

    <Button
        android:id="@+id/btn_introduce_key_manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_introduce_key_manually" />

</LinearLayout>