<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fooock.app.shodand.fragment.IntroduceKeyFragment">

    <TextView
        android:id="@+id/txt_title_introduce_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_introduce_api_key"
        android:gravity="center"
        android:textSize="@dimen/txt_title_size" />

    <TextView
        android:id="@+id/txt_description_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_description_api_key"
        android:gravity="center"
        android:layout_below="@id/txt_title_introduce_api_key" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_input_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_description_api_key"
        android:hint="@string/til_your_api_key">

        <EditText
            android:id="@+id/et_input_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_continue_with_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue_with_api_key"
        android:layout_below="@id/til_input_api_key" />

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_below="@id/btn_continue_with_api_key"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_validate_api_key" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_error_validating_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@id/layout_loading"
        android:gravity="center" />

</RelativeLayout>
